<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/buttonSubmit"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_register"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/buttonSubmit"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/checkBoxKeepLoggedOn"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_submit_button_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/sign_up_remember_me" />

    <CheckBox
        android:id="@+id/checkBoxKeepLoggedOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBoxRememberMe"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/sign_up_keep_remember_on" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextAddress"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/sign_up_edittext_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/sign_up_edittext_address_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_up_title_height"
        android:background="@color/sign_up_title_background_color"
        android:gravity="center"
        android:text="@string/sign_up_title"
        android:textColor="@color/sign_up_title_text_color"
        android:textSize="@dimen/sign_up_title_size"
        android:textStyle="bold" />

</RelativeLayout>